2001-03-27  Hans-Peter Nilsson  <hp@axis.com>

	* configure.in (cris-*-*): Change default emulation to criself.
	(cris-*-*aout*): New rule.
	* configure: Regenerate.

2001-03-26  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (tc_s390_fix_adjustable): Add test for
	BFD_RELOC_390_GOTENT.
	* config/tc-s390.h (TC_RELOC_RTSYM_LOC_FIXUP): Add test for
	BFD_RELOC_390_GOTENT.

2001-03-26  Nick Clifton  <nickc@redhat.com>

	* config/tc-s390.h (TC_FORCE_RELOCATION): Define.
	* config/tc-s390.c (s390_force_relocation): New function: Force
	relocations for VTINHERIT relocs.

2001-03-23  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* doc/as.texinfo: Put @c man begin to generate the as man page.
	When generating man, define all the variables. Re-organize some
	options to obtain better indentation of man page.
	* doc/Makefile.am (MANCONF, TEXI2POD, POD2MAN): New variable.
	(as.1): Build from as.texinfo.
	* doc/Makefile.in: Regenerate.Index: binutils/Makefile.am

2001-03-25  Alan Modra  <alan@linuxcare.com.au>

	* config/tc-i386.c (i386_scale): Accept an absolute expression for
	scale factor, and return the end of the expression.
	(i386_operand): Modify for above.

2001-03-23  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo: Document --listing-XXX command line switches.
	Explain why listings behave differently when -pipe is used.

2001-03-23  Richard Sandiford  <rsandifo@redhat.com>

	* write.c (fix_new_exp): Print an error if passed a register.

2001-03-23  Hans-Peter Nilsson  <hp@axis.com>

	* config/tc-cris.c: Tweak attribution.  Fix typos.  PIC support.
	(PIC_SUFFIX_CHAR): New macro.
	(cris_get_pic_suffix, cris_get_pic_reloc_size): New functions.
	(pic): New variable.
	(md_longopts): New option --pic.
	(OPTION_PIC): Define.
	(md_estimate_size_before_relax): Tweak longish comment.
	(md_create_long_jump): Make the long jumps generate ADD.D offset,PC.
	(md_assemble): Handle a PIC relocation on prefix and normal
	instruction operands.